5234965 - Only dump url as a result of posting

--- a/real-sections/bbcode/sites/www.svduhoc.com/postSteps.html
+++ b/real-sections/bbcode/sites/www.svduhoc.com/postSteps.html
@@ -17,7 +17,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>//img[@alt='Start new topic']</td>
 	<td></td>
 </tr>
@@ -32,7 +32,7 @@
 	<td>@content</td>
 </tr>
 <tr>
-	<td>click</td>
+	<td>clickAndWait</td>
 	<td>dosubmit</td>
 	<td></td>
 </tr>
