[m] Tweak some configurations

--- a/real-sections/bbcode/sites/www.svduhoc.com/postSteps.html
+++ b/real-sections/bbcode/sites/www.svduhoc.com/postSteps.html
@@ -12,7 +12,7 @@
 <tr><td rowspan="1" colspan="3">postSteps</td></tr>
 </thead><tbody>
 <tr>
-	<td>open</td>
+	<td>openAndWait</td>
 	<td>/forum/index.php?showforum=44</td>
 	<td></td>
 </tr>
