[maintain]-Finetune step on some sites

--- a/real-sections/bbcode/sites/www.diendandaihoc.com/postSteps.html
+++ b/real-sections/bbcode/sites/www.diendandaihoc.com/postSteps.html
@@ -12,13 +12,8 @@
 <tr><td rowspan="1" colspan="3">postSteps</td></tr>
 </thead><tbody>
 <tr>
-	<td>open</td>
-	<td>/forumdisplay.php?f=72</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//img[@alt='Gởi Ðề Tài Mới']</td>
+	<td>openAndWait</td>
+	<td>/newthread.php?do=newthread&amp;f=72</td>
 	<td></td>
 </tr>
 <tr>
