--- a/real-sections/bbcode/sites/www.svduhoc.com/loginSteps.html
+++ b/real-sections/bbcode/sites/www.svduhoc.com/loginSteps.html
@@ -31,6 +31,11 @@
 	<td>//div[@id='ipbwrapper']/table[2]/tbody/tr/td[2]/form/input[3]</td>
 	<td></td>
 </tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Or click here if you do not wish to wait</td>
+	<td></td>
+</tr>
 
 </tbody></table>
 </body>
