--- a/real-sections/bbcode/sites/www.svduhoc.com/postSteps.html
+++ b/real-sections/bbcode/sites/www.svduhoc.com/postSteps.html
@@ -13,12 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>openAndWait</td>
-	<td>/forum/index.php?showforum=44</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//img[@alt='Start new topic']</td>
+	<td>/forum/index.php?act=post&amp;do=new_post&amp;f=44</td>
 	<td></td>
 </tr>
 <tr>
